--- a/output.css
+++ b/output.css
@@ -163,9 +163,6 @@
   }
 }
 @layer utilities {
-  .z-1 {
-    z-index: 1;
-  }
   .flex {
     display: flex;
   }
@@ -261,6 +258,9 @@
   .text-\[20px\] {
     font-size: 20px;
   }
+  .text-\[40px\] {
+    font-size: 40px;
+  }
   .text-\[50px\] {
     font-size: 50px;
   }
@@ -287,6 +287,9 @@
 }
 .hidden-card {
   height: 80px;
+}
+.lorem0 {
+  display: none;
 }
 @property --tw-border-style {
   syntax: "*";
